--- a/book.asciidoc
+++ b/book.asciidoc
@@ -29,7 +29,7 @@ include::sessions.asciidoc[]
 
 include::persistent.asciidoc[]
 
-include::ch11.asciidoc[]
+include::deploying-your-webapp.asciidoc[]
 
 [[I_part_d1e6218]]
 = Advanced
