--- a/book.asciidoc
+++ b/book.asciidoc
@@ -34,9 +34,7 @@ include::deploying-your-webapp.asciidoc[]
 [[I_part_d1e6218]]
 = Advanced
 
-
-
-include::ch12.asciidoc[]
+include::restful-content.asciidoc[]
 
 include::ch13.asciidoc[]
 
