--- a/authentication-and-authorization.asciidoc
+++ b/authentication-and-authorization.asciidoc
@@ -72,8 +72,9 @@ Let's jump right in with an example of authentication.
 {-# LANGUAGE QuasiQuotes           #-}
 {-# LANGUAGE TemplateHaskell       #-}
 {-# LANGUAGE TypeFamilies          #-}
+import           Data.Default           (def)
 import           Data.Text              (Text)
-import           Network.HTTP.Conduit   (Manager, def, newManager)
+import           Network.HTTP.Conduit   (Manager, conduitManagerSettings, newManager)
 import           Yesod
 import           Yesod.Auth
 import           Yesod.Auth.BrowserId
@@ -130,7 +131,7 @@ getHomeR = do
 
 main :: IO ()
 main = do
-    man <- newManager def
+    man <- newManager conduitManagerSettings
     warp 3000 $ App man
 ----
 
@@ -187,6 +188,12 @@ So what exactly goes in this +YesodAuth+ instance? There are six required declar
    This allow authentication backends which use HTTP connections (i.e., almost
    all third-party login systems) to share connections, avoiding the cost of
    restarting a TCP connection for each request.
+
+In addition to these six methods, there are other methods available to control
+other behavior of the authentication system, such as what the login page looks
+like. For more information, please
+link:http://hackage.haskell.org/package/yesod-auth-1.2.5.2/docs/Yesod-Auth.html#t:YesodAuth[see
+the API documentation].
 
 In our +HomeR+ handler, we have some simple links to the login and logout
 pages, depending on whether or not the user is logged in. Notice how we
@@ -421,8 +428,9 @@ your Yesod typeclass instance. Let's see an example.
 {-# LANGUAGE QuasiQuotes           #-}
 {-# LANGUAGE TemplateHaskell       #-}
 {-# LANGUAGE TypeFamilies          #-}
+import           Data.Default         (def)
 import           Data.Text            (Text)
-import           Network.HTTP.Conduit (Manager, def, newManager)
+import           Network.HTTP.Conduit (Manager, conduitManagerSettings, newManager)
 import           Yesod
 import           Yesod.Auth
 import           Yesod.Auth.Dummy -- just for testing, don't use in real life!!!
@@ -503,7 +511,7 @@ getAdminR = defaultLayout
 
 main :: IO ()
 main = do
-    manager <- newManager def
+    manager <- newManager conduitManagerSettings
     warp 3000 $ App manager
 ----
 
