--- a/book.asciidoc
+++ b/book.asciidoc
@@ -4,76 +4,76 @@
 :lang: en
 // a2x: --format=epub --doctype=book
 
-include::chapters/pr01.asciidoc[]
+include::pr01.asciidoc[]
 
 [[I_part_d1e305]]
 = Basics
 
-include::chapters/introduction.asciidoc[]
+include::introduction.asciidoc[]
 
-include::chapters/haskell.asciidoc[]
+include::haskell.asciidoc[]
 
-include::chapters/basics.asciidoc[]
+include::basics.asciidoc[]
 
-include::chapters/shakespearean-templates.asciidoc[]
+include::shakespearean-templates.asciidoc[]
 
-include::chapters/widgets.asciidoc[]
+include::widgets.asciidoc[]
 
-include::chapters/yesod-typeclass.asciidoc[]
+include::yesod-typeclass.asciidoc[]
 
-include::chapters/routing-and-handlers.asciidoc[]
+include::routing-and-handlers.asciidoc[]
 
-include::chapters/forms.asciidoc[]
+include::forms.asciidoc[]
 
-include::chapters/sessions.asciidoc[]
+include::sessions.asciidoc[]
 
-include::chapters/persistent.asciidoc[]
+include::persistent.asciidoc[]
 
-include::chapters/deploying-your-webapp.asciidoc[]
+include::deploying-your-webapp.asciidoc[]
 
 [[I_part_d1e6218]]
 = Advanced
 
-include::chapters/restful-content.asciidoc[]
+include::restful-content.asciidoc[]
 
-include::chapters/yesods-monads.asciidoc[]
+include::yesods-monads.asciidoc[]
 
-include::chapters/authentication-and-authorization.asciidoc[]
+include::authentication-and-authorization.asciidoc[]
 
-include::chapters/scaffolding-and-the-site-template.asciidoc[]
+include::scaffolding-and-the-site-template.asciidoc[]
 
-include::chapters/internationalization.asciidoc[]
+include::internationalization.asciidoc[]
 
-include::chapters/creating-a-subsite.asciidoc[]
+include::creating-a-subsite.asciidoc[]
 
-include::chapters/understanding-request.asciidoc[]
+include::understanding-request.asciidoc[]
 
 [[I_part_d1e8222]]
 = Examples
 
-include::chapters/initializing-foundation-data.asciidoc[]
+include::initializing-foundation-data.asciidoc[]
 
-include::chapters/blog-example-advanced.asciidoc[]
+include::blog-example-advanced.asciidoc[]
 
-include::chapters/wiki-chat-example.asciidoc[]
+include::wiki-chat-example.asciidoc[]
 
-include::chapters/json-web-service.asciidoc[]
+include::json-web-service.asciidoc[]
 
-include::chapters/case-study-sphinx.asciidoc[]
+include::case-study-sphinx.asciidoc[]
 
 [[I_part_d1e8717]]
 = Appendices
 
 
 
-include::chapters/monad-control.asciidoc[]
+include::monad-control.asciidoc[]
 
-include::chapters/conduits.asciidoc[]
+include::conduits.asciidoc[]
 
-include::chapters/web-application-interface.asciidoc[]
+include::web-application-interface.asciidoc[]
 
-include::chapters/settings-types.asciidoc[]
+include::settings-types.asciidoc[]
 
-include::chapters/http-conduit.asciidoc[]
+include::http-conduit.asciidoc[]
 
-include::chapters/xml.asciidoc[]
+include::xml.asciidoc[]
