--- a/book/yesod-web-framework-book.asciidoc
+++ b/book/yesod-web-framework-book.asciidoc
@@ -1,79 +1,71 @@
-= Developing Web Applications with Haskell and Yesod
+= Yesod Web Framework Book
 
 :author: Michael Snoyman
 :lang: en
 // a2x: --format=epub --doctype=book
 
-include::pr01.asciidoc[]
-
-[[I_part_d1e305]]
 = Basics
 
-include::introduction.asciidoc[]
+include::chapters/introduction.asciidoc[]
 
-include::haskell.asciidoc[]
+include::chapters/haskell.asciidoc[]
 
-include::basics.asciidoc[]
+include::chapters/basics.asciidoc[]
 
-include::shakespearean-templates.asciidoc[]
+include::chapters/shakespearean-templates.asciidoc[]
 
-include::widgets.asciidoc[]
+include::chapters/widgets.asciidoc[]
 
-include::yesod-typeclass.asciidoc[]
+include::chapters/yesod-typeclass.asciidoc[]
 
-include::routing-and-handlers.asciidoc[]
+include::chapters/routing-and-handlers.asciidoc[]
 
-include::forms.asciidoc[]
+include::chapters/forms.asciidoc[]
 
-include::sessions.asciidoc[]
+include::chapters/sessions.asciidoc[]
 
-include::persistent.asciidoc[]
+include::chapters/persistent.asciidoc[]
 
-include::deploying-your-webapp.asciidoc[]
+include::chapters/deploying-your-webapp.asciidoc[]
 
-[[I_part_d1e6218]]
 = Advanced
 
-include::restful-content.asciidoc[]
+include::chapters/restful-content.asciidoc[]
 
-include::yesods-monads.asciidoc[]
+include::chapters/yesods-monads.asciidoc[]
 
-include::authentication-and-authorization.asciidoc[]
+include::chapters/authentication-and-authorization.asciidoc[]
 
-include::scaffolding-and-the-site-template.asciidoc[]
+include::chapters/scaffolding-and-the-site-template.asciidoc[]
 
-include::internationalization.asciidoc[]
+include::chapters/internationalization.asciidoc[]
 
-include::creating-a-subsite.asciidoc[]
+include::chapters/creating-a-subsite.asciidoc[]
 
-include::understanding-request.asciidoc[]
+include::chapters/understanding-request.asciidoc[]
 
-[[I_part_d1e8222]]
 = Examples
 
-include::initializing-foundation-data.asciidoc[]
+include::chapters/initializing-foundation-data.asciidoc[]
 
-include::blog-example-advanced.asciidoc[]
+include::chapters/blog-example-advanced.asciidoc[]
 
-include::wiki-chat-example.asciidoc[]
+include::chapters/wiki-chat-example.asciidoc[]
 
-include::json-web-service.asciidoc[]
+include::chapters/json-web-service.asciidoc[]
 
-include::case-study-sphinx.asciidoc[]
+include::chapters/case-study-sphinx.asciidoc[]
 
-[[I_part_d1e8717]]
 = Appendices
 
+include::chapters/monad-control.asciidoc[]
 
+include::chapters/conduits.asciidoc[]
 
-include::monad-control.asciidoc[]
+include::chapters/web-application-interface.asciidoc[]
 
-include::conduits.asciidoc[]
+include::chapters/settings-types.asciidoc[]
 
-include::web-application-interface.asciidoc[]
+include::chapters/http-conduit.asciidoc[]
 
-include::settings-types.asciidoc[]
-
-include::http-conduit.asciidoc[]
-
-include::xml.asciidoc[]
+include::chapters/xml.asciidoc[]
