--- a/book/yesod-for-haskellers.asciidoc
+++ b/book/yesod-for-haskellers.asciidoc
@@ -512,20 +512,445 @@ performing this evaluation can cause more memory usage. Therefore, Yesod
 provides a means of opting out of this protection.
 
 +TypedContent+ is then a minor addition to +Content+: it includes the
-+ContentType+ as well.
++ContentType+ as well. Together with a convention that an application returns a
+200 OK status unless otherwise specified, we have everything we need from the
++TypedContent+ type to create a response.
+
+Yesod *could* have taken the approach of requiring users to always return
++TypedContent+ from a handler function, but that would have required manually
+converting to that type. Instead, Yesod uses a pair of typeclasses for this,
+appropriately named +ToContent+ and +ToTypedContent+. They have exactly the
+definitions you'd expect:
+
+[source, haskell]
+----
+class ToContent a where
+    toContent :: a -> Content
+class ToContent a => ToTypedContent a where
+    toTypedContent :: a -> TypedContent
+----
+
+And Yesod provides instances for many common data types, including +Text+,
++Html+, and aeson's +Value+ type (containing JSON data). That's how the
++getHomeR+ function was able to return +Html+: Yesod knows how to convert it to
++TypedContent+, and from there it can be converted into a +WAI+ response.
 
 === HasContentType and representations
 
+This typeclass approach allows for one other nice abstraction. For many types, the type system itself lets us know what the content-type for the content should be. For example, +Html+ will always be served with a +text/html+ content-type.
+
+NOTE: This isn't true for all instance of +ToTypedContent+. For a counter
+example, consider the +ToTypedContent TypedContent+ instance.
+
+Some requests to a web application can be displayed with various *representation*. For example, a request for tabular data could be served with:
+
+* An HTML table.
+* A CSV file.
+* XML.
+* JSON data to be consumed by some client-side Javascript.
+
+The HTTP spec allows a client to specify its preference of representation via
+the +accept+ request header. And Yesod allows a handler function to use the
++selectRep+/+provideRep+ function combo to provide multiple representations,
+and have the framework automatically choose the appropriate one based on the
+client headers.
+
+The last missing piece to make this all work is the +HasContentType+ typeclass:
+
+[source, haskell]
+----
+class ToTypedContent a => HasContentType a where
+    getContentType :: Monad m => m a -> ContentType
+----
+
+The parameter +m a+ is just a poor man's +Proxy+ type. There are instances for
+this typeclass for most data types supported by +ToTypedContent+. Below is our
+example from above, tweaked just a bit to provide multiple representations of
+the data:
+
+[source, haskell]
+----
+{-# LANGUAGE OverloadedStrings #-}
+{-# LANGUAGE TypeFamilies #-}
+import Network.Wai
+import Network.Wai.Handler.Warp
+import Yesod.Core
+import qualified Text.Blaze.Html5 as H
+import Data.Text (Text)
+
+-- | Our foundatation datatype.
+data App = App
+    { welcomeMessageHtml :: !Html
+    , welcomeMessageText :: !Text
+    , welcomeMessageJson :: !Value
+    }
+
+instance Yesod App
+
+instance RenderRoute App where
+    data Route App = HomeR -- just one accepted URL
+        deriving (Show, Read, Eq, Ord)
+
+    renderRoute HomeR = ( [] -- empty path info, means "/"
+                        , [] -- empty query string
+                        )
+
+getHomeR :: HandlerT App IO TypedContent
+getHomeR = do
+    site <- getYesod
+    selectRep $ do
+        provideRep $ return $ welcomeMessageHtml site
+        provideRep $ return $ welcomeMessageText site
+        provideRep $ return $ welcomeMessageJson site
+
+instance YesodDispatch App where
+    yesodDispatch yesodRunnerEnv req =
+        let maybeRoute =
+                case pathInfo req of
+                    [] -> Just HomeR
+                    _  -> Nothing
+            handler =
+                case maybeRoute of
+                    Nothing -> notFound
+                    Just HomeR -> getHomeR
+         in yesodRunner handler yesodRunnerEnv maybeRoute req
+
+main :: IO ()
+main = do
+    waiApp <- toWaiApp App
+        { welcomeMessageHtml = H.p "Welcome to Yesod!"
+        , welcomeMessageText = "Welcome to Yesod!"
+        , welcomeMessageJson = object ["msg" .= ("Welcome to Yesod!" :: Text)]
+        }
+    run 3000 waiApp
+----
+
+=== Convenience +warp+ function
+
+And one minor convenience you'll see quite a bit in the Yesod world. It's very
+common to call +toWaiApp+ to create a WAI +Application+, and then pass that to
+Warp's +run+ function. So Yesod provides a convenience +warp+ wrapper function.
+We can replace our previous +main+ function with the following:
+
+[source, haskell]
+----
+main :: IO ()
+main =
+    warp 3000 App
+        { welcomeMessageHtml = H.p "Welcome to Yesod!"
+        , welcomeMessageText = "Welcome to Yesod!"
+        , welcomeMessageJson = object ["msg" .= ("Welcome to Yesod!" :: Text)]
+        }
+----
+
+There's also a +warpEnv+ function which reads the port number from the +PORT+
+environment variable, which is useful for working with platforms such as FP
+Haskell Center, or deployment tools like Keter.
+
+== Writing handlers
+
+Since the vast majority of your application will end up living in the
++HandlerT+ monad transformer, it's not surprising that there are quite a few
+functions that work in that context. +HandlerT+ is an instance of many common
+typeclasses, including +MonadIO+, +MonadTrans+, +MonadBaseControl+,
++MonadLogger+ and +MonadResource+, and so can automatically take advantage of
+those functionalities.
+
+In addition to that standard functionality, the following are some common
+categories of functions. The only requirement Yesod places on your handler
+functions is that, ultimately, they return a type which is an instance of
++ToTypedContent+.
+
+This section is just a short overview of functionality. For more information,
+you should either look through the Haddocks, or read the rest of this book.
+
+=== Getting request parameters
+
+There are a few pieces of information provided by the client in a request:
+
+* The requested path. This is usually handled by Yesod's routing framework, and is not directly queried in a handler function.
+* Query string parameters. This can be queried using +lookupGetParam+.
+* Request bodies. In the case of URL encoded and multipart bodies, you can use +lookupPostParam+ to get the request parameter. For multipart bodies, there's also +lookupFile+ for file parameters.
+* Request headers can be queried via +lookupHeader+. (And response headers can be set with +addHeader+.)
+* Yesod parses cookies for you automatically, and they can be queried using +lookupCookie+. (Cookies can be *set* via the +setCookie+ function.)
+* Finally, Yesod provides a user session framework, where data can be set in a cryptographically secure session and associated with each user. This can be queried and set using the functions +lookupSession+, +setSession+ and +deleteSession+.
+
+While you can use these functions directly for such purposes as processing
+forms, you usually will want to use the yesod-form library, which provides a
+higher level form abstraction based on applicative functors.
+
+=== Short circuiting
+
+In some cases, you'll want to short circuit the handling of a request. Reasons
+for doing this would be:
+
+* Send an HTTP redirect, via the +redirect+ function. This will default to using the 303 status code. You can use +redirectWith+ to get more control over this.
+* Return a 404 not found with +notFound+, or a 405 bad method via +badMethod+.
+* Indicate some error in the request via +notAuthenticated+, +permissionDenied+, or +invalidArgs+.
+* Send a special response, such as with +sendFile+ or +sendResponseStatus+ (to override the status 200 response code)
+* +sendWaiResponse+ to drop down a level of abstraction, bypass some Yesod abstractions, and use WAI itself.
+
+=== Streaming
+
+So far, the examples of +ToTypedContent+ instances I gave all involved
+non-streaming responses. +Html+, +Text+, and +Value+ all get converted into a
++ContentBuilder+ constructor. As such, they cannot interleave I/O with sending
+data to the user. What happens if we want to perform such interleaving?
+
+When we encountered this issue in WAI, we introduced the +responseSource+
+method of constructing a response. Using +sendWaiResponse+, we could reuse that
+same method for creating a streaming response in Yesod. But there's also a
+simpler API for doing this: +respondSource+. +respondSource+ takes two
+parameters: the content type of the response, and a +Source+ of +Flush
+Builder+. Yesod also provides a number of convenience functions for creating
+that +Source+, such as +sendChunk+, +sendChunkBS+, and +sendChunkText+.
+
+Here's an example, which just converts our initial +responseSource+ example
+from WAI to Yesod.
+
+[source, haskell]
+----
+{-# LANGUAGE OverloadedStrings #-}
+{-# LANGUAGE TypeFamilies      #-}
+import           Blaze.ByteString.Builder           (fromByteString)
+import           Blaze.ByteString.Builder.Char.Utf8 (fromShow)
+import           Control.Concurrent                 (threadDelay)
+import           Control.Monad                      (forM_)
+import           Data.Monoid                        ((<>))
+import           Network.Wai                        (pathInfo)
+import           Yesod.Core
+
+-- | Our foundatation datatype.
+data App = App
+
+instance Yesod App
+
+instance RenderRoute App where
+    data Route App = HomeR -- just one accepted URL
+        deriving (Show, Read, Eq, Ord)
+
+    renderRoute HomeR = ( [] -- empty path info, means "/"
+                        , [] -- empty query string
+                        )
+
+getHomeR :: HandlerT App IO TypedContent
+getHomeR = respondSource "text/plain" $ do
+    sendChunkBS "Starting streaming response.\n"
+    sendChunkText "Performing some I/O.\n"
+    sendFlush
+    -- pretend we're performing some I/O
+    liftIO $ threadDelay 1000000
+    sendChunkBS "I/O performed, here are some results.\n"
+    forM_ [1..50 :: Int] $ \i -> do
+        sendChunk $ fromByteString "Got the value: " <>
+                    fromShow i <>
+                    fromByteString "\n"
+
+instance YesodDispatch App where
+    yesodDispatch yesodRunnerEnv req =
+        let maybeRoute =
+                case pathInfo req of
+                    [] -> Just HomeR
+                    _  -> Nothing
+            handler =
+                case maybeRoute of
+                    Nothing -> notFound
+                    Just HomeR -> getHomeR
+         in yesodRunner handler yesodRunnerEnv maybeRoute req
+
+main :: IO ()
+main = warp 3000 App
+----
+
 == Dynamic parameters
 
-== LiteApp
+Now that we've finished our detour into the details of the +HandlerT+
+transformer, let's get back to higher-level Yesod request processing. So far,
+all of our examples have dealt with a single supported request route. Let's
+make this more interesting. We now want to have an application which serves
+Fibonacci numbers. If you make a request to +/fib/5+, it will return the fifth
+Fibonacci number. And if you visit +/+, it will automatically redirect you to
++/fib/1+.
+
+In the Yesod world, the first question to ask is: how do we model our route
+data type? This is pretty straight-forward: +data Route App = HomeR | FibR
+Int+. The question is: how do we want to define our +RenderRoute+ instance? We
+need to convert the +Int+ to a +Text+. What function should we use?
+
+Before you answer that, realize that we'll *also* need to be able to parse back a +Text+ into an +Int+ for dispatch purposes. So we need to make sure that we have a pair of functions with the property +fromText . toText == Just+. +Show+/+Read+ could be a candidate for this, except that:
+
+. We'd be required to convert through +String+.
+. The +Show+/+Read+ instances for +Text+ and +String+ both involve extra escaping, which we don't want to incur.
+
+Instead, the approach taken by Yesod is the path-pieces package, and in
+particular the +PathPiece+ typeclass, defined as:
+
+[source, haskell]
+----
+class PathPiece s where
+    fromPathPiece :: Text -> Maybe s
+    toPathPiece   :: s    -> Text
+----
+
+Using this typeclass, we can write parse and render functions for our route datatype:
+
+[source, haskell]
+----
+instance RenderRoute App where
+    data Route App = HomeR | FibR Int
+        deriving (Show, Read, Eq, Ord)
+
+    renderRoute HomeR = ([], [])
+    renderRoute (FibR i) = (["fib", toPathPiece i], [])
+
+parseRoute' [] = Just HomeR
+parseRoute' ["fib", i] = FibR <$> fromPathPiece i
+parseRoute' _ = Nothing
+----
+
+And then we can write our +YesodDispatch+ typeclass instance:
+
+[source, haskell]
+----
+instance YesodDispatch App where
+    yesodDispatch yesodRunnerEnv req =
+        let maybeRoute = parseRoute' (pathInfo req)
+            handler =
+                case maybeRoute of
+                    Nothing -> notFound
+                    Just HomeR -> getHomeR
+                    Just (FibR i) -> getFibR i
+         in yesodRunner handler yesodRunnerEnv maybeRoute req
+
+getHomeR = redirect (FibR 1)
+
+fibs :: [Int]
+fibs = 0 : scanl (+) 1 fibs
+
+getFibR i = return $ show $ fibs !! i
+----
+
+Notice our call to +redirect+ in +getHomeR+. We're able to use the route
+datatype as the parameter to +redirect+, and Yesod takes advantage of our
++renderRoute+ function to create a textual link.
 
 == Template Haskell
 
+Now let's suppose we want to add a new route to our previous application. We'd
+have to make the following changes:
+
+. Modify the +Route+ datatype itself.
+. Add a clause to +renderRoute+.
+. Add a clause to +parseRoute'+, and make sure it corresponds correctly to +renderRoute+.
+. Add a clause to the case statement in +yesodDispatch+ to call our handler function.
+. Write our handler function.
+
+That's a lot of changes! And lots of manual, boilerplate changes means lots of
+potential for mistakes. Some of the mistakes can be caught by the compiler if
+you turn on warnings (forgetting to add a clause in +renderRoute+ or a match in
+++yesodDispatch++'s case statement), but others cannot (ensuring that
++renderRoute+ and +parseRoute+ have the same logic, or adding the +parseRoute+
+clause).
+
+This is where Template Haskell comes into the Yesod world. Instead of dealing
+with all of these changes manually, Yesod declares a high level routing syntax.
+This syntax lets you specify your route syntax, dynamic parameters, constructor
+names, and accepted request methods, and automatically generates parse, render,
+and dispatch functions.
+
+To get an idea of how much manual coding this saves, have a look at our
+previous example converted to the Template Haskell version:
+
+[source, haskell]
+----
+{-# LANGUAGE OverloadedStrings #-}
+{-# LANGUAGE QuasiQuotes       #-}
+{-# LANGUAGE TemplateHaskell   #-}
+{-# LANGUAGE TypeFamilies      #-}
+import           Yesod.Core
+
+-- | Our foundatation datatype.
+data App = App
+
+instance Yesod App
+
+mkYesod "App" [parseRoutes|
+/         HomeR GET
+/fib/#Int FibR  GET
+|]
+
+getHomeR :: Handler ()
+getHomeR = redirect (FibR 1)
+
+fibs :: [Int]
+fibs = 0 : scanl (+) 1 fibs
+
+getFibR :: Int -> Handler String
+getFibR i = return $ show $ fibs !! i
+
+main :: IO ()
+main = warp 3000 App
+----
+
+What's wonderful about this is, as the developer, you can now focus on the
+important part of your application, and not get involved in the details of
+writing parsers and renderers. There are of course some downsides to the usage
+of Template Haskell:
+
+* Compile times are a bit slower.
+* The details of what's going on behind the scenes aren't easily apparent. (Though you can use +cabal haddock+ to see what identifiers have been generated for you.)
+* You don't have as much fine-grained control. For example, in the Yesod route syntax, each dynamic parameter has to be a separate field in the route constructor, as opposed to bundling fields together. This is a conscious trade-off in Yesod between flexibility and complexity.
+
+This usage of Template Haskell is likely the most controversial decision in
+Yesod. I personally think the benefits definitely justify its usage. But if
+you'd rather avoid Template Haskell, you're free to do so. Every example so far
+in this appendix has done so, and you can follow those techniques. We also have
+another, simpler approach in the Yesod world: +LiteApp+.
+
+=== LiteApp
+
++LiteApp+ allows you to throw away type safe URLs and Template Haskell. It uses
+a simple routing DSL in pure Haskell. Once again, as a simple comparison, let's
+rewrite our Fibonacci example to use it.
+
+[source, haskell]
+----
+import           Data.Text  (pack)
+import           Yesod.Core
+
+getHomeR :: LiteHandler ()
+getHomeR = redirect "/fib/1"
+
+fibs :: [Int]
+fibs = 0 : scanl (+) 1 fibs
+
+getFibR :: Int -> LiteHandler String
+getFibR i = return $ show $ fibs !! i
+
+main :: IO ()
+main = warp 3000 $ liteApp $ do
+    dispatchTo getHomeR
+    onStatic (pack "fib") $ withDynamic $ \i -> dispatchTo (getFibR i)
+----
+
+There you go, a simple Yesod app without any language extensions at all!
+However, even this application still demonstrates some type safety. Yesod will
+use +fromPathPiece+ to convert the parameter for +getFibR+ from +Text+ to an
++Int+, so any invalid parameter will be got by Yesod itself. It's just one less
+piece of checking that you have to perform.
+
 == Widgets
+
+FIXME
 
 == Shakespeare
 
+FIXME
+
 == Forms
 
+FIXME
+
 == Persistent
+
+FIXME
